<resources>
    <string name="app_name">1980s Trivia</string>
    <string name="app_title">80s Music Quiz</string>

    <string name="quizDescription">Test your knowledge of music made in the 1980s</string>

    <string name="aesthetic">4K Aesthetic Wallpaper Dragonzebra</string>


    <!--Questions-->

    <string name="quiz_1">What other two bands did the members of Love and Rockets perform with?</string>

    <string name="quiz_1_a">Tones on Tail</string>
    <string name="quiz_1_b">Sisters of Mercy</string>
    <string name="quiz_1_c">Bauhaus</string>
    <string name="quiz_1_d">The Damned</string>
    <string name="quiz_1_e">The Mission UK</string>

    <!--...-->

    <string name="quiz_2">True or False: Biz Markie\'s nickname was the \"Clown Prince of Hip Hop\"?</string>

    <!--...-->

    <string name="quiz_3">Which songs were hits for The GoGos?</string>

    <string name="quiz_3_a">Vacation</string>
    <string name="quiz_3_b">In Your Room</string>
    <string name="quiz_3_c">Head Over Heels</string>
    <string name="quiz_3_d">Eternal Flame</string>
    <string name="quiz_3_e">Our Lips Are Sealed</string>

    <!--...-->

    <string name="quiz_4">What are the last four words of this lyric from Billy Ocean\'s \"Caribbean Queen\"?</string>
    <string name="your_answer_4">\"Caribbean Queen, now we\'re sharing the same dream, and our hearts they beat as one, no more  ____ __ ___ ___\"</string>

    <!--...-->

    <string name="quiz_5">Who lives in Tennessee because all his exes live in Texas?</string>

    <string name="ab_choice">George Jones</string>
    <string name="ba_choice">George Strait</string>

    <!--...-->

    <string name="quiz_6">Who were the members of the supergroup LSG?</string>

    <string name="quiz_6_a">Scott</string>
    <string name="quiz_6_b">Levert</string>
    <string name="quiz_6_c">Gerard</string>
    <string name="quiz_6_d">Sweat</string>
    <string name="quiz_6_e">Gill</string>

    <!--...-->

    <string name="quiz_7">\"Come On Eileen\" was a huge hit for Men At Work.</string>

    <!--...-->

    <string name="quiz_8">What are the first four words to Suzanne Vega\'s first hit song?</string>
    <string name="your_answer_8">\"__ ____ __ ____ , I live on the second floor, I live upstairs from you, yes I think you\'ve seen me before\"</string>

    <!--...-->

    <string name="quiz_9">Herbie Hancock went to #1 with what song? </string>

    <string name="quiz_9_a">Rocket Steady</string>
    <string name="quiz_9_b">Jam On It</string>
    <string name="quiz_9_c">Freakazoid</string>
    <string name="quiz_9_d">Rockit</string>
    <string name="quiz_9_e">Super Freak</string>

    <!--...-->

    <string name="quiz_10">Singer Bjork performed with 10,000 Maniacs before she went solo.</string>

    <!--Answers-->

    <string name="fact_1">Daniel Ash, Kevin Haskins, and David J had all been members of Bauhaus and later Tones on Tail.</string>

    <string name="fact_2">True. The rapper, beatboxer, singer and DJ is also a comedian.</string>

    <string name="fact_3">The GoGos had hits with \"Our Lips Are Sealed\", \"Head Over Heals\", and \"Vacation\".  \"In Your Room\" and \"Eternal Flame\" were sung by The Bangles.</string>

    <string name="fact_4">.. love on the run </string>

    <string name="fact_5">George Strait sang the hit country song \"All My Exes Live in Texas\".</string>

    <string name="fact_6">Eddie Levert, Keith Sweat, and Johnny Gill made up LSG.</string>

    <string name="fact_7">\"Come On Eileen\" was a #1 hit for Dexys Midnight Runners.</string>

    <string name="fact_8">My name is Luka..</string>

    <string name="fact_9">\"Rockit\" from his album \"Future Shock\"</string>

    <string name="fact_10">False. She was the lead singer of the Sugarcubes. </string>


    <!--Other text-->

    <string name="checkbox_hint">Check all that are correct</string>
    <string name="typed_hint">Type your answer here</string>
    <string name="true_choice">True</string>
    <string name="false_choice">False</string>
    <string name="btn_text_check">Submit</string>
    <string name="btn_text_1">Score</string>
    <string name="showAnswers">See Answers</string>

    <!--Image descriptions-->
    <string name="q1_img">Bauhaus</string>

    <string name="q2_img">A DJ scratching</string>

    <string name="q3_img">Vintage 1950s</string>

    <string name="q4_img">Caribbean island</string>

    <string name="q5_img">Cowboy hats</string>

    <string name="q6_img">Record store</string>

    <string name="q7_img">Street sign</string>

    <string name="q8_img">Sad boy</string>

    <string name="q9_img">Herbie Hancock</string>

    <string name="q10_img">Sugarcubes</string>

</resources>




