<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <ImageView
                    android:id="@+id/aesthetic_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/aesthetic"
                    android:src="@drawable/aesthetic_wallpaper_dragonzebra" />

                <TextView
                    style="@style/QuestionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/aesthetic_background"
                    android:layout_alignRight="@id/aesthetic_background"
                    android:layout_alignTop="@id/aesthetic_background"
                    android:layout_marginTop="0dp"
                    android:fontFamily="monospace"
                    android:text="@string/app_name"
                    android:textSize="36sp" />
            </RelativeLayout>

            <!--Quiz questions-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <!--************************* Question 1 ************************ -->

                <TextView
                    style="@style/QuestionText"
                    android:text="@string/quiz_1" />

                <TextView
                    style="@style/AnswerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/checkbox_hint" />

                <CheckBox
                    android:id="@+id/checkbox_1_a"
                    style="@style/ChoiceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/quiz_1_a" />

                <CheckBox
                    android:id="@+id/checkbox_1_b"
                    style="@style/ChoiceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/quiz_1_b" />

                <CheckBox
                    android:id="@+id/checkbox_1_c"
                    style="@style/ChoiceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/quiz_1_c" />

                <CheckBox
                    android:id="@+id/checkbox_1_d"
                    style="@style/ChoiceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/quiz_1_d" />

                <CheckBox
                    android:id="@+id/checkbox_1_e"
                    style="@style/ChoiceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/quiz_1_e" />

                <Button
                    android:id="@+id/check_1_button"
                    style="@style/checkButtons"
                    android:onClick="checkBtn1"/>

                <TextView
                    android:id="@+id/answer_1"
                    style="@style/AccentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <!--************************* Question 2 ************************ -->
                <TextView
                    style="@style/QuestionText"
                    android:text="@string/quiz_2" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/true_radio_button"
                        style="@style/ChoiceText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/true_choice"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/false_radio_button"
                        style="@style/ChoiceText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/false_choice"
                        android:textAppearance="?android:textAppearanceMedium" />

                </RadioGroup>

                <Button
                    android:id="@+id/check_2_button"
                    style="@style/checkButtons"
                    android:onClick="checkBtn2"/>

                <TextView
                    android:id="@+id/answer_2"
                    style="@style/AccentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <!--************************* Question 3 ************************ -->
                <TextView
                    style="@style/QuestionText"
                    android:text="@string/quiz_3" />

                <TextView
                    style="@style/AnswerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/checkbox_hint" />

                <CheckBox
                    android:id="@+id/checkbox_3_a"
                    style="@style/ChoiceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/quiz_3_a" />

                <CheckBox
                    android:id="@+id/checkbox_3_b"
                    style="@style/ChoiceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/quiz_3_b" />

                <CheckBox
                    android:id="@+id/checkbox_3_c"
                    style="@style/ChoiceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/quiz_3_c" />

                <CheckBox
                    android:id="@+id/checkbox_3_d"
                    style="@style/ChoiceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/quiz_3_d" />

                <CheckBox
                    android:id="@+id/checkbox_3_e"
                    style="@style/ChoiceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/quiz_3_e" />

                <Button
                    android:id="@+id/check_3_button"
                    style="@style/checkButtons"
                    android:onClick="checkBtn3"/>

                <TextView
                    android:id="@+id/answer_3"
                    style="@style/AccentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <!--************************* Question 4 ************************ -->
                <TextView
                    style="@style/QuestionText"
                    android:text="@string/quiz_4" />

                <TextView
                    style="@style/ChoiceText"
                    android:padding="32dp"
                    android:text="@string/your_answer_4" />

                <EditText
                    android:id="@+id/quiz_4_editable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:backgroundTint="@color/questionText"
                    android:inputType="textMultiLine"
                    android:paddingBottom="8dp"
                    android:textColor="@color/colorAccent" />

                <Button
                    android:id="@+id/check_4_button"
                    style="@style/checkButtons"
                    android:onClick="checkBtn4" />

                <TextView
                    android:id="@+id/answer_4"
                    style="@style/AccentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <!--************************* Question 5 ************************ -->
                <TextView
                    style="@style/QuestionText"
                    android:text="@string/quiz_5" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/adults_babies_radio_button"
                        style="@style/ChoiceText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ab_choice"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/babies_adults_radio_button"
                        style="@style/ChoiceText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ba_choice"
                        android:textAppearance="?android:textAppearanceMedium" />

                </RadioGroup>

                <Button
                    android:id="@+id/check_5_button"
                    style="@style/checkButtons"
                    android:onClick="checkBtn5"/>
                <!---->

                <TextView
                    android:id="@+id/answer_5"
                    style="@style/AccentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <!--************************* Question 6 ************************ -->
                <TextView
                    style="@style/QuestionText"
                    android:text="@string/quiz_6" />

                <TextView
                    style="@style/AnswerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_hint" />

                <CheckBox
                    android:id="@+id/checkbox_6_a"
                    style="@style/ChoiceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/quiz_6_a"
                    android:textAppearance="?android:textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/checkbox_6_b"
                    style="@style/ChoiceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/quiz_6_b"
                    android:textAppearance="?android:textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/checkbox_6_c"
                    style="@style/ChoiceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/quiz_6_c"
                    android:textAppearance="?android:textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/checkbox_6_d"
                    style="@style/ChoiceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/quiz_6_d"
                    android:textAppearance="?android:textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/checkbox_6_e"
                    style="@style/ChoiceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/quiz_6_e"
                    android:textAppearance="?android:textAppearanceMedium" />

                <Button
                    android:id="@+id/check_6_button"
                    style="@style/checkButtons"
                    android:onClick="checkBtn6"/>
                <!---->

                <TextView
                    android:id="@+id/answer_6"
                    style="@style/AccentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <!--************************* Question 7 ************************ -->
                <TextView
                    style="@style/QuestionText"
                    android:text="@string/quiz_7" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_button_7a"
                        style="@style/ChoiceText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/true_choice"
                        android:textAppearance="?android:textAppearanceMedium" />


                    <RadioButton
                        android:id="@+id/radio_button_7b"
                        style="@style/ChoiceText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/false_choice"
                        android:textAppearance="?android:textAppearanceMedium" />

                </RadioGroup>

                <Button
                    android:id="@+id/check_7_button"
                    style="@style/checkButtons"
                    android:onClick="checkBtn7"/>
                <!---->

                <TextView
                    android:id="@+id/answer_7"
                    style="@style/AccentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <!--************************* Question 8 ************************ -->
                <TextView
                    style="@style/QuestionText"
                    android:text="@string/quiz_8" />

                <TextView
                    style="@style/ChoiceText"
                    android:padding="32dp"
                    android:text="@string/your_answer_8" />

                <EditText
                    android:id="@+id/quiz_8_editable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:backgroundTint="@color/questionText"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorAccent" />

                <Button
                    android:id="@+id/check_8_button"
                    style="@style/checkButtons"
                    android:onClick="checkBtn8"/>


                <TextView
                    android:id="@+id/answer_8"
                    style="@style/AccentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />


                <!--End of Quiz Questions-->

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/submit_score_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/btn_text_1"
        android:onClick="submitScore"
        android:gravity="center"/>

    <Button
        android:id="@+id/reset_score_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/reset"
        android:onClick="resetScore"/>

</LinearLayout>

                <TextView
                    android:id="@+id/final_score_message"
                    style="@style/AnswerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text=""
                    android:textColor="@color/colorAccent"
                    android:textSize="32sp" />


            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</android.support.constraint.ConstraintLayout>